* website/*: Added a basic website.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,8 @@
 2004-01-12  Jonathan Hunt <jhuntnz@users.sourceforge.net>
 
+	* website/*: Added a basic website.
+
+2004-01-12  Jonathan Hunt <jhuntnz@users.sourceforge.net>
+
 	* First import.
 
